UI: Commando: Fix missaligned result entries (primarily on OSX)
(integrated from master branch change 9.2.1-643-g09b378f by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/commando/skin/commando.less
+++ b/src/modules/commando/skin/commando.less
@@ -216,6 +216,7 @@
             label, description
             {
                 font-size: 1.1rem;
+                line-height: 1.1rem;
             }
             
             .icon-wrapper
@@ -256,11 +257,13 @@
                     white-space: nowrap;
                     overflow: hidden;
                     text-overflow: ellipsis;
+                    margin: 0 0 0 6px;
                 }
 
                 .description
                 {
                     opacity: 0.7;
+                    margin: 0 0 0 6px;
                 }
             }
             
@@ -272,8 +275,8 @@
                     margin-bottom: 0;
                     padding-top: 0;
                     padding-bottom: 0;
-                    line-height: 1rem;
-                    height: 1rem;
+                    line-height: 1.1rem;
+                    height: 1.1rem;
                 }
             }
             
